@@ -1,3 +1,8 @@
+2004-03-17  Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	PR target/14260
+	* config/rtems.h: Add STD_LIB_SPEC and LIB_SPEC.
+
 2004-03-21  Roger Sayle  <roger@eyesopen.com>
 
 	* fold-const.c (fold) <EQ_EXPR>: Rewrite optimization to transform
